# veracity

./: .env.example  .envrc  .gitignore  CLAUDE.md  PIPELINE.md  README.md  WEBSOCKET_IMPLEMENTATION.md  cleanup_test_data.sh  docker-compose.celery.yml  docker-compose.yml  flake.nix  test-websocket.html  test_data_pipeline.sh  test_websocket.py
.github/workflows/: test.yml
backend/: .flake8  Dockerfile  Makefile  alembic.ini  celery_dev.sh  celerybeat-schedule-shm  celerybeat-schedule-wal  conftest.py  coverage.json  pyproject.toml  pytest.ini.bak  requirements.txt  run_tests.py  start_celery.sh  stop_celery.sh  test_news_collector.py  test_reddit_collector.py
backend/alembic/: env.py
backend/alembic/versions/: 0744d6033956_initial_database_schema.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: ingestion.py  mock.py  pipeline.py  processing.py  sources.py  stories.py  trends.py  trust.py  websocket.py  websocket_enhanced.py
backend/app/core/: celery_app.py  config.py  database.py  logging.py
backend/app/models/: mongo_models.py  sql_models.py
backend/app/schemas/: ingestion.py  pipeline.py  source.py  story.py  trend.py  trust.py
backend/app/services/: source_service.py  story_service.py  trend_service.py  websocket_manager.py  websocket_service.py
backend/app/services/ingestion/: ingestion_manager.py  news_collector.py  reddit_collector.py  twitter_collector.py
backend/app/services/processing/: nlp_processor.py  trend_detector.py
backend/app/services/scoring/: __init__.py  trust_scorer.py
backend/app/tasks/: __init__.py  pipeline.py  scheduled.py
backend/backend/scripts/: seed_test_data.py
backend/tests/: README.md  test_basic.py
backend/tests/e2e/: test_workflow_e2e.py
backend/tests/integration/: test_reddit_collector_integration.py  test_trust_scoring_integration.py
backend/tests/unit/api/: test_trends_api.py  test_trust_api.py
backend/tests/unit/services/: test_trend_service.py  test_trust_scorer.py
backend/veracity_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/stories/: page.tsx
frontend/src/components/: ConnectionStatus.tsx  DashboardLayout.tsx  DataStatistics.tsx  IngestionStatus.tsx  SystemHealth.tsx
frontend/src/components/stories/: StoryCard.tsx  StoryList.tsx
frontend/src/components/trends/: TrendCard.tsx  TrendFeed.tsx
frontend/src/contexts/: WebSocketContext.tsx
frontend/src/hooks/: useDarkMode.ts  useRealtimeData.ts  useSharedWebSocket.ts  useWebSocket.ts
frontend/src/services/: api.ts
frontend/src/store/: dashboardStore.ts
frontend/src/types/: ingestion.ts  story.ts  trend.ts
